# Drivee-DataPilot

./: README.md  docker-compose.yml  start.sh
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: admin.py  ask.py  datasource.py  dictionary.py  eval.py  execute.py  schedule.py  summarize.py  templates.py
backend/app/core/: auth.py  config.py  datasource.py  garbage.py  guardrails.py  interpretation.py  llm.py  pipeline.py  rate_limit.py  retrieval.py  scheduler.py  selector.py  semantic.py  serialization.py  sql_transpile.py  value_linker.py  voting.py
backend/app/db/: models.py  seed_from_tlc.py  session.py
backend/eval/: compare.py  golden_set.yaml  harness.py  run_eval.py
backend/prompts/: fewshots.yaml  system_ru.py
backend/semantic/: drivee.yaml
backend/tests/: conftest.py  test_auth.py  test_dsn_helpers.py  test_garbage_filter.py  test_guardrails.py  test_harness_compare.py  test_interpretation.py  test_llm.py  test_pipeline_helpers.py  test_progress_callback.py  test_rate_limit.py  test_serialization.py  test_strip_code_fences.py  test_strip_comments.py  test_summarize_clean_label.py  test_value_linker.py  test_value_linker_quoting.py  test_voting.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: config.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AnswerSkeleton.tsx  AssistantCard.tsx  ConfidenceMeter.tsx  HowIAnswered.tsx  ProfileBlock.tsx  ResultChart.tsx  Sidebar.tsx  (+5 more)
scripts/: init.sql
(+30 files in other folders)
